# rust_cpp_new

./: Cargo.toml  README.md  build.rs
src/: lib.rs  new.cpp
tests/: custom_allocator.rs  default_allocator.rs  jemalloc_allocator.rs
tests/simple_cpp_lib/: Cargo.toml  build.rs
tests/simple_cpp_lib/src/: lib.cpp  lib.rs
