[package]
license = "CC0-1.0"
name = "cpp_new"
version = "0.1.0"
authors = ["Neil Henning <sheredom@gmail.com>"]
description = "Overload C++ new/delete to map them back to Rust's global allocator"
repository = "https://github.com/sheredom/rust_cpp_new"
readme = "README.md"
keywords = ["cpp", "CPP", "new", "delete", "allocator"]

[build-dependencies]
cc = "1.0.25"

[dev-dependencies]
cpp_new_simple_cpp_lib = "0.1.0"
lazy_static = "1.2.0"
libc = "0.2"

[badges]
travis-ci = { repository = "sheredom/rust_cpp_new" }
